navigation z-index fix

--- a/_sass/modules/_header-nav.sass
+++ b/_sass/modules/_header-nav.sass
@@ -45,7 +45,8 @@ nav
       ul
          text-align: right
          padding-right: 5%
-         position: static
+         position: relative
+         z-index: 10
          height: auto
          width: 100%
          background-color: transparent
